update proponentes form

--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-de-seleccion/components/proponentes-seleccionados-invitacion-cerrada/proponentes-seleccionados-invitacion-cerrada.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-de-seleccion/components/proponentes-seleccionados-invitacion-cerrada/proponentes-seleccionados-invitacion-cerrada.component.html
@@ -136,10 +136,10 @@
       <!-- </div> -->
       <div *ngIf="nuevo">
         <app-form-datos-proponentes-nuevo
-          *ngFor='let in of counter() ;let i = index'
           #proponente
           [procesoSeleccion]="procesoSeleccion"
           [noTanNuevo]="true"
+          [amountNuevosProponentes]="amountNuevosProponentes(amountNuevosProponentes)"
           (guardar)="onSubmitNuevoProponente()"
         >
         </app-form-datos-proponentes-nuevo>
