--- a/asivamosffie.web/asivamosffie/src/app/_pages/solicitar-disponibilidad-presupuestal/components/ver-detalle-ddp-administrativo/ver-detalle-ddp-administrativo.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/solicitar-disponibilidad-presupuestal/components/ver-detalle-ddp-administrativo/ver-detalle-ddp-administrativo.component.html
@@ -16,11 +16,11 @@
                 <mat-card-title class="header-card--text textoGris">
                     Aportante {{i+1}}
                 </mat-card-title>
-    
-                <p>
+
+                <!--<p>
                     <strong>Valor del aportante al proyecto:</strong>
                     {{apo.valorAportanteAlProyecto}}
-                </p>
+                </p>-->
                 <p>
                     <strong>Nombre del aportante:</strong>
                     {{apo.nombre}}
@@ -32,11 +32,11 @@
                     </p>
                     <p>
                         <strong>Valor fuente {{j+1}}:</strong>
-                        ${{fuentes.saldo_actual_de_la_fuente}}
+                        ${{fuentes.valorFuente}}
                         <!--{{fuentes.valor_solicitado_de_la_fuente | currency:'COP':'symbol-narrow':'.0-0'}}-->
                     </p>
                 </div>
-                    
+
             </mat-card-content>
     </mat-card>
     <mat-card class="shipping-card mainGris">
