--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/verdetalle-editar-solicitud-pago/verdetalle-editar-solicitud-pago.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/verdetalle-editar-solicitud-pago/verdetalle-editar-solicitud-pago.component.html
@@ -190,12 +190,12 @@
 
           <mat-expansion-panel class="expansion-style">
             <mat-expansion-panel-header class="expansion-style--header">
-              <mat-panel-title class="expansion-style--title sin-diligenciar">
+              <mat-panel-title class="expansion-style--title" [ngClass]="enabledAcordeon('descripcionFactura', registroCompletoAcordeones.registroCompletoFormaDePago)">
                 Descripción de la factura
               </mat-panel-title>
             </mat-expansion-panel-header>
 
-            <app-form-descripcion-factura></app-form-descripcion-factura>
+            <app-form-descripcion-factura [contrato]="contrato"></app-form-descripcion-factura>
           </mat-expansion-panel>
 
           <mat-expansion-panel class="expansion-style">
