--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-de-seleccion/components/proponentes-seleccionados-invitacion-cerrada/proponentes-seleccionados-invitacion-cerrada.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-de-seleccion/components/proponentes-seleccionados-invitacion-cerrada/proponentes-seleccionados-invitacion-cerrada.component.html
@@ -103,35 +103,37 @@
       </div>
       <!-- <div *ngIf=" this.addressForm.get('nombresProponentes').value != 'Nuevo' "> -->
       <div class="pt-1em" *ngFor="let proponente of procesoSeleccion.procesoSeleccionProponente; let i = index">
-        <mat-card-title class="header-card--text sub-text"> Proponente {{ i + 1 }} </mat-card-title>
-        <p>
-          <strong>Nombre del proponente:</strong>
-          {{ proponente.nombreProponente }}
-        </p>
-        <p>
-          <strong>Número de identificación del proponente:</strong>
-          {{ proponente.numeroIdentificacion }}
-        </p>
-        <p>
-          <strong>Departamento del domicilio del proponente:</strong>
-          {{ proponente.departamentoString ? proponente.departamentoString : proponente.nombreDepartamento }}
-        </p>
-        <p>
-          <strong>Municipio del domicilio del proponente:</strong>
-          {{ proponente.municipioString ? proponente.municipioString : proponente.nombreMunicipio }}
-        </p>
-        <p>
-          <strong>Dirección del proponente:</strong>
-          {{ proponente.direccionProponente }}
-        </p>
-        <p>
-          <strong>Teléfono del proponente</strong>
-          {{ proponente.telefonoProponente }}
-        </p>
-        <p>
-          <strong>Correo electrónico del proponente:</strong>
-          {{ proponente.emailProponente }}
-        </p>
+        <div *ngIf="proponente.tipoProponenteCodigo === '2'">
+          <mat-card-title class="header-card--text sub-text"> Proponente {{ i + 1 }} </mat-card-title>
+          <p>
+            <strong>Nombre del proponente:</strong>
+            {{ proponente.nombreProponente }}
+          </p>
+          <p>
+            <strong>Número de identificación del proponente:</strong>
+            {{ proponente.numeroIdentificacion }}
+          </p>
+          <p>
+            <strong>Departamento del domicilio del proponente:</strong>
+            {{ proponente.departamentoString ? proponente.departamentoString : proponente.nombreDepartamento }}
+          </p>
+          <p>
+            <strong>Municipio del domicilio del proponente:</strong>
+            {{ proponente.municipioString ? proponente.municipioString : proponente.nombreMunicipio }}
+          </p>
+          <p>
+            <strong>Dirección del proponente:</strong>
+            {{ proponente.direccionProponente }}
+          </p>
+          <p>
+            <strong>Teléfono del proponente:</strong>
+            {{ proponente.telefonoProponente }}
+          </p>
+          <p>
+            <strong>Correo electrónico del proponente:</strong>
+            {{ proponente.emailProponente }}
+          </p>
+        </div>
       </div>
       <!-- </div> -->
       <div *ngIf="nuevo">
@@ -140,6 +142,7 @@
           [procesoSeleccion]="procesoSeleccion"
           [noTanNuevo]="true"
           [amountNuevosProponentes]="amountNuevosProponentes(amountNuevosProponentes)"
+          [procesoSeleccionProponente]="procesoSeleccion.procesoSeleccionProponente"
           (guardar)="onSubmitNuevoProponente()"
         >
         </app-form-datos-proponentes-nuevo>
