--- a/asivamosffie.web/asivamosffie/src/app/_pages/requisitos-tecnicos-construccion/components/detalle-manejo-anticipo/detalle-manejo-anticipo.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/requisitos-tecnicos-construccion/components/detalle-manejo-anticipo/detalle-manejo-anticipo.component.html
@@ -2,11 +2,11 @@
     <mat-card class="border">
         <mat-card-content>
             <p><b>¿El contrato requiere anticipo? </b>: {{ contratacion.manejoAnticipoRequiere === true ? 'Si' : 'No' }}</p>
-            <p><b>¿Cuenta con plan de inversión aprobado para el anticipo?</b>: {{ contratacion.manejoAnticipoPlanInversion === true ? 'Si' : 'No' }}</p>
-            <p><b>¿Cuenta con cronograma de amortización aprobado?</b>: {{ contratacion.manejoAnticipoCronogramaAmortizacion === true ? 'Si' : 'No' }}</p>
+            <p *ngIf=" contratacion.manejoAnticipoRequiere === true"><b>¿Cuenta con plan de inversión aprobado para el anticipo?</b>: {{ contratacion.manejoAnticipoPlanInversion === true ? 'Si' : 'No' }}</p>
+            <p *ngIf=" contratacion.manejoAnticipoRequiere === true"><b>¿Cuenta con cronograma de amortización aprobado?</b>: {{ contratacion.manejoAnticipoCronogramaAmortizacion === true ? 'Si' : 'No' }}</p>
         </mat-card-content>
     </mat-card>
 </div>
 <div align="left" *ngIf="contratacion">
-    <p><b>URL con soporte</b>: {{ contratacion.manejoAnticipoRutaSoporte }}</p>
+    <p *ngIf=" contratacion.manejoAnticipoRequiere === true"><b>URL con soporte</b>: {{ contratacion.manejoAnticipoRutaSoporte }}</p>
 </div>
