--- a/asivamosffie.web/asivamosffie/src/app/_pages/solicitar-contratacion/components/definir-fuentes-y-usos/definir-fuentes-y-usos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/solicitar-contratacion/components/definir-fuentes-y-usos/definir-fuentes-y-usos.component.html
@@ -333,7 +333,8 @@
                                 </div>
                                 <div class="col">
                                   <mat-form-field class="select-width">
-                                    <mat-select required formControlName="fuenteFinanciacionId">
+                                    <mat-select required formControlName="fuenteFinanciacionId"  
+                                    (selectionChange)="changeFoundingSource2( $event, j, uso)">
                                       <mat-option *ngFor="let fuente of aportante.get( 'listaFuenteFinanciacion' ).value" [value]="fuente.fuenteFinanciacionId">
                                         {{ fuente.nombreFuente }}
                                       </mat-option>
