--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-defensa-judicial/components/form-convocados-dj/form-convocados-dj.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-defensa-judicial/components/form-convocados-dj/form-convocados-dj.component.html
@@ -87,7 +87,7 @@
                                         </mat-select>
                                     </mat-form-field>
                                 </div>
-                                <span class="icon-incompleto">
+                                <span class="icon-incompleto m-0">
                                     <img class="icon-incompleto--img" src="assets/img/icon/incompleto.svg"
                                         alt="este campo es requerido" [matTooltipPosition]="'above'"
                                         matTooltip="Debe ingresar la información en el campo para continuar"
