--- a/asivamosffie.web/asivamosffie/src/app/_pages/solicitar-contratacion/components/table-solicitud-contratacion/table-solicitud-contratacion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/solicitar-contratacion/components/table-solicitud-contratacion/table-solicitud-contratacion.component.html
@@ -80,9 +80,9 @@
                           || (element.estadoSolicitudCodigo === 'Aprobado por comité fiduciario')
                           || (element.estadoSolicitudCodigo === 'Enviadas a la Fiduciaria')
                           || (element.estadoSolicitudCodigo === 'Firmado')
-                          || ( element.estadoSolicitudCodigo === 'Firmado ' )
-                          || ( element.estadoSolicitudCodigo === 'Registrados' )
-                          || ( element.estadoSolicitudCodigo === 'En proceso de firmas' )
+                          || (element.estadoSolicitudCodigo === 'Firmado ' )
+                          || (element.estadoSolicitudCodigo === 'Completo' )
+                          || (element.estadoSolicitudCodigo === 'En proceso de firmas' )
                           || (element.estadoSolicitudCodigo === 'En firma del contratista')
                           || (element.estadoSolicitudCodigo === 'Rechazado por comité fiduciario' && element.registroCompleto)
                           || (element.estadoSolicitudCodigo === 'En proceso de firmas' && element.registroCompleto)
