add card objeto

--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-de-seleccion/components/form-datos-proponentes-nuevo/form-datos-proponentes-nuevo.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-de-seleccion/components/form-datos-proponentes-nuevo/form-datos-proponentes-nuevo.component.html
@@ -756,7 +756,7 @@
           </div>
         </div>
         <div class="text-center">
-          <button mat-button color="warn" class="btn-guardar" type="submit" *ngIf="j + 1 === amountNuevosProponentes">
+          <button mat-button color="warn" class="btn-guardar" type="submit" *ngIf="j + 1 === proponentesField.controls.length">
             <img src="assets/img/icon/guardar.svg" alt="Guardar" />
           </button>
         </div>
