--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-de-seleccion/components/monitorear-cronograma/monitorear-cronograma.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-de-seleccion/components/monitorear-cronograma/monitorear-cronograma.component.html
@@ -12,7 +12,7 @@
     </div>
 
     <mat-card class="shipping-card var-main-gris">
-        <mat-card-header class="header-card">
+        <mat-card-header class="header-card header-card--margin">
           <mat-card-title class="header-card--text">
             Objeto
           </mat-card-title>
