--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/tabla-avance-fisico/tabla-avance-fisico.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/tabla-avance-fisico/tabla-avance-fisico.component.html
@@ -90,6 +90,8 @@
                           <input  matInput
                                   type="number"
                                   min="0"
+                                  maxlength="4"
+                                  onKeyPress="if(this.value.length>=this.maxLength) return false;"
                                   [max]="avanceFisicoCapitulo.programacionCapitulo"
                                   [(ngModel)]="avanceFisicoCapitulo.avanceFisicoCapitulo"
                                   required
