--- a/asivamosffie.web/asivamosffie/src/app/_pages/solicitar-contratacion/components/table-solicitud-contratacion/table-solicitud-contratacion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/solicitar-contratacion/components/table-solicitud-contratacion/table-solicitud-contratacion.component.html
@@ -28,7 +28,7 @@
 
       <ng-container matColumnDef="estadoSolicitud">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado de solicitud </th>
-        <td mat-cell *matCellDef="let element"> {{element.estadoSolicitudCodigo}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.estadoSolicitudNombre}} </td>
       </ng-container>
 
       <ng-container matColumnDef="estadoDelIngreso">
@@ -54,46 +54,47 @@
         <td mat-cell *matCellDef="let element">
           <a mat-raised-button color="accent" class="btn-table"
             [routerLink]="['/solicitarContratacion/solicitud', element.contratacionId]"
-            *ngIf="element.estadoSolicitudCodigo == 'Sin registro' && element.usuarioModificacion === undefined">
+            *ngIf="element.estadoSolicitudCodigo == estadosContratacion.Sin_Registro && element.usuarioModificacion === undefined">
             Detallar la solicitud
           </a>
           <button mat-raised-button color="accent" class="btn-table" (click)="onDelete(element.contratacionId)"
-            *ngIf="element.estadoSolicitudCodigo == 'Sin registro'">
+            *ngIf="element.estadoSolicitudCodigo == estadosContratacion.Sin_Registro">
             Eliminar
           </button>
           <a mat-raised-button color="accent" class="btn-table"
             [routerLink]="['/solicitarContratacion/solicitud', element.contratacionId]"
-            *ngIf=" (element.estadoSolicitudCodigo == 'Sin registro' && element.usuarioModificacion !== undefined)
-                    || (element.estadoSolicitudCodigo === 'Devuelto por comité técnico')
-                    || (element.estadoSolicitudCodigo === 'Devuelto por comité fiduciario')">
+            *ngIf=" (element.estadoSolicitudCodigo == estadosContratacion.Sin_Registro && element.usuarioModificacion !== undefined)
+                    || (element.estadoSolicitudCodigo === estadosContratacion.DevueltoComiteTecnico)
+                    || (element.estadoSolicitudCodigo === estadosContratacion.DevueltoComiteFiduciario)">
             Ver detalle / Editar
           </a>
           <button mat-raised-button color="accent" class="btn-table" (click)="enviarSolicitud(element.contratacionId)"
-            *ngIf="element.estadoSolicitudCodigo === 'Sin registro' && element.registroCompleto">
+            *ngIf="element.estadoSolicitudCodigo === estadosContratacion.Sin_Registro && element.registroCompleto">
             Enviar Solicitud
           </button>
           <button mat-raised-button color="accent" class="btn-table"
                   [routerLink]="['/solicitarContratacion/verDetalleContratacion', element.contratacionId]"
-                  *ngIf=" (element.estadoSolicitudCodigo === 'En trámite' && element.registroCompleto)
-                          || (element.estadoSolicitudCodigo === 'Rechazado por comité técnico' && element.registroCompleto)
-                          || (element.estadoSolicitudCodigo === 'Aprobado por comité técnico')
-                          || (element.estadoSolicitudCodigo === 'Aprobado por comité fiduciario')
-                          || (element.estadoSolicitudCodigo === 'Enviadas a la Fiduciaria')
-                          || (element.estadoSolicitudCodigo === 'Firmado')
-                          || (element.estadoSolicitudCodigo === 'Firmado ' )
-                          || (element.estadoSolicitudCodigo === 'Completo' )
-                          || (element.estadoSolicitudCodigo === 'En proceso de firmas' )
-                          || (element.estadoSolicitudCodigo === 'En firma del contratista')
-                          || (element.estadoSolicitudCodigo === 'Rechazado por comité fiduciario' && element.registroCompleto)
-                          || (element.estadoSolicitudCodigo === 'En proceso de firmas' && element.registroCompleto)
-                          || (element.estadoSolicitudCodigo === 'Registradas por la fiduciaria')">
+                  *ngIf=" (element.estadoSolicitudCodigo === estadosContratacion.En_tramite && element.registroCompleto)
+                          || (element.estadoSolicitudCodigo === estadosContratacion.RechazadoComiteTecnico && element.registroCompleto)
+                          || (element.estadoSolicitudCodigo === estadosContratacion.AprobadoComiteTecnico)
+                          || (element.estadoSolicitudCodigo === estadosContratacion.AprobadoComiteFiduciario)
+                          || (element.estadoSolicitudCodigo === estadosContratacion.Enviadas_a_la_Fiduciaria)
+                          || (element.estadoSolicitudCodigo === estadosContratacion.Firmado )
+                          || (element.estadoSolicitudCodigo === estadosContratacion.En_proceso_de_firmas )
+                          || (element.estadoSolicitudCodigo === estadosContratacion.En_Firma_Del_Contratista)
+                          || (element.estadoSolicitudCodigo === estadosContratacion.RechazadoComiteFiduciario && element.registroCompleto)
+                          || (element.estadoSolicitudCodigo === estadosContratacion.En_proceso_de_firmas && element.registroCompleto)
+                          || (element.estadoSolicitudCodigo === estadosContratacion.Registradas_por_la_fiduciaria)
+                          || (element.estadoSolicitudCodigo === estadosContratacion.Rechazada_por_validacion_presupuestal)
+                          || (element.estadoSolicitudCodigo === estadosContratacion.Cancelado_por_generacion_presupuestal)
+                          || (element.estadoSolicitudCodigo === estadosContratacion.Registrados)">
                   Ver detalle
           </button>
           <button mat-raised-button color="accent" class="btn-table"
                   (click)="observacionesDialog( element.numeroSolicitud, element.contratacionId )"
-                  *ngIf=" (element.estadoSolicitudCodigo === 'Devuelto por comité técnico' && element.registroCompleto)
-                          || (element.estadoSolicitudCodigo === 'Rechazado por comité técnico' && element.registroCompleto)
-                          || (element.estadoSolicitudCodigo === 'Rechazado por comité fiduciario' && element.registroCompleto)">
+                  *ngIf=" (element.estadoSolicitudCodigo === estadosContratacion.DevueltoComiteTecnico && element.registroCompleto)
+                          || (element.estadoSolicitudCodigo === estadosContratacion.RechazadoComiteTecnico && element.registroCompleto)
+                          || (element.estadoSolicitudCodigo === estadosContratacion.RechazadoComiteFiduciario && element.registroCompleto)">
                   Observaciones
           </button>
         </td>
