--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-contractuales/components/form-aportantes/form-aportantes.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-contractuales/components/form-aportantes/form-aportantes.component.html
@@ -37,11 +37,13 @@
             <p><b>Valor del aportante al proyecto</b>: {{ tipoSolicitud === listaTipoSolicitud.obra ? ( proyectoAportante.valorObra | currency:'COP':'symbol-narrow':'.0-0' ) : ( proyectoAportante.valorInterventoria | currency:'COP':'symbol-narrow':'.0-0' ) }}</p>
         </section>
             <section *ngFor="let fuente of proyectoAportante.aportante.fuenteFinanciacion; let j = index">
-              <h3 style="margin-bottom: .2em;margin-top: 1em;"><b>Fuente {{ j+1 }}</b></h3>
-              <div>
-                <p><b>Fuente</b>: {{ fuente.fuenteRecursosCodigo }}</p>
-                <p><b>Valor solicitado de la fuente</b>: {{ fuente.valorFuente | currency:'COP':'symbol-narrow':'.0-0' }}</p>
-              </div>
+              <section *ngFor="let fuentedef of fuente.gestionFuenteFinanciacion; let k = index">
+                <h3 style="margin-bottom: .2em;margin-top: 1em;"><b>Fuente {{ k+1 }}</b></h3>
+                <div>
+                  <p><b>Fuente</b>: {{ fuentedef.fuenteNombre }}</p>
+                  <p><b>Valor solicitado de la fuente</b>: {{ fuentedef.valorSolicitado | currency:'COP':'symbol-narrow':'.0-0' }}</p>
+                </div>
+              </section>
             </section>
           </mat-card-content>
         </mat-card>
