--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-de-seleccion/components/proponentes-seleccionados-invitacion-cerrada/proponentes-seleccionados-invitacion-cerrada.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-de-seleccion/components/proponentes-seleccionados-invitacion-cerrada/proponentes-seleccionados-invitacion-cerrada.component.html
@@ -142,7 +142,7 @@
           [procesoSeleccion]="procesoSeleccion"
           [noTanNuevo]="true"
           [amountNuevosProponentes]="amountNuevosProponentes(amountNuevosProponentes)"
-          [procesoSeleccionProponente]="procesoSeleccion.procesoSeleccionProponente"
+          [procesoSeleccionProponente]="addressForm.get('nombresProponentes').value"
           (guardar)="onSubmitNuevoProponente()"
         >
         </app-form-datos-proponentes-nuevo>
